# helm-ai-kernel

./: .bestpractices.json  .editorconfig  .gitignore  .gitleaks.toml  .goreleaser.yml  AGENTS.md  BEST_PRACTICES.md  CHANGELOG.md  CLAIMS.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  Dockerfile  Dockerfile.slim  GOVERNANCE.md  HELM Console.command  HELM_AI_KERNEL_TAILORED_ENGINEERING_PROMPT.md  HELM_INVARIANTS.md  HELM_OSS_TAILORED_ENGINEERING_PROMPT.md  MAINTAINERS.md  Makefile  NOTICE  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TRADEMARK.md  agent.yaml  artifacthub-repo.yml  catalog-info.yaml  docker-compose.demo.yml  docker-compose.yml  go.work  install.sh  jitpack.yml  mcp-bundle.json  mise.toml  (+3 more)
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.devcontainer/: devcontainer.json
.github/: AI_NOTE.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  SURFACE.md  TEST_MATRIX.md  codegen-requirements.txt  dependabot.yml  python-build-requirements.txt
adapters/: README.md
api/: README.md
sdk/python/: README.md  generated.manifest.json  pyproject.toml  requirements-runtime.txt
sdk/python/anthropic/: README.md  __init__.py  helm_anthropic.py  pyproject.toml  test_helm_anthropic.py
sdk/python/autogen/: README.md  __init__.py  helm_autogen.py  pyproject.toml  test_helm_autogen.py
sdk/python/crewai/: pyproject.toml  test_helm_crewai.py
sdk/python/dify/: README.md  __init__.py  helm_dify.py
sdk/python/haystack/: README.md  __init__.py  helm_haystack.py
sdk/python/helm_sdk/: __init__.py  client.py  types_gen.py
sdk/python/langchain/: pyproject.toml  test_helm_langchain.py
sdk/python/langgraph/: README.md  __init__.py  helm_langgraph.py
sdk/python/llamaindex/: test_helm_llamaindex.py
sdk/python/mcp_trust/: README.md  __init__.py  helm_mcp_trust.py
sdk/python/mistral/: README.md  __init__.py  helm_mistral.py
sdk/python/nostr_wot/: README.md  __init__.py  helm_nostr_wot.py
sdk/python/openai_agents/: pyproject.toml
sdk/python/semantic_kernel/: README.md  __init__.py  helm_semantic_kernel.py  pyproject.toml
sdk/python/smolagents/: README.md  __init__.py  helm_smolagents.py
sdk/python/tests/: conftest.py  test_client.py  test_client_coverage_matrix.py  test_generated_models_coverage.py
(+4047 files in other folders)
